--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
     var s = document.getElementsByTagName('script')[0];
     s.parentNode.insertBefore(wf, s);
   })(); </script><center>
-<div style="font-family: 'Pacifico', serif; font-size:69pt;background-color:red;">Attention:</div><div style=";background-color:red;"><br>
-                <h2> This website will be moving from Dropbox to GitHub for hosting </h2>
-                <h3> This should not affect you, but if anything turns up missing, contact <a href="https://www.twitter.com/stormyjet"> @StormyJet </a> on twitter. </h3>
-                <h4> Thanks! </h4></div></center>
+<!--<div style="font-family: 'Pacifico', serif; font-size:69pt;background-color:red;">Attention:</div><div style=";background-color:red;"><br>
+                <h2> Call to attention </h2>
+                <h3> Explanation and contact inf contact <a href="https://www.twitter.com/stormyjet"> @StormyJet </a> on twitter. </h3>
+                <h4> Thanks! </h4></div></center>-->
 
             
             <div class="hero-unit">
@@ -53,7 +53,7 @@
                 <h4> To anyone promoting this game, please link to this page and not a direct download link </h4><br><br></p>
                 
 			<p>	
-				<h2><a href="https://dl.dropboxusercontent.com/u/67160210/metero%20game%20site%20and%20mirrors/MeteorGame.exe">Click here to download the latest version of  Meteor Game</a></h2><br>
+				<h2><a href="https://dl.dropboxusercontent.com/u/67160210/metero%20game%20site%20and%20mirrors/MeteorGame.exe">Click here to download the latest version of  Meteor Game</a><p style="font-color='red';">CURRENTLY DOWN</h2><br>
 				<br>
 				<h3> FAQ </h3><br>
 				<h4> Why? </h4>
