--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 				After leaving sim mode on for <em> 10 minutes </em> the game had spawned over <em> 50,000 </em> meteors. 50,000 meteors, at once. 
 				<h3> Older Versions! </h3><br>
 				<h4> The older versions of Meteor Game are not supported. Any Bugs you find are your responsiblity. You're on your own.</h4><br>
-				<h4><a href="https://dl.dropboxusercontent.com/u/67160210/metero%20game%20site%20and%20mirrors/Retro%20Meteor%20Game.exe"> Click here to the "Retro" version of Meteor Game</a></h4>
-				<small><a href="https://dl.dropboxusercontent.com/u/67160210/metero%20game%20site%20and%20mirrors/Meteor%20Game%20classic.exe">the super-super old version with music i dont own. please dont sue me chipzel</a></small><br>
+				<h4><a href="Retro%20Meteor%20Game.exe"> Click here to the "Retro" version of Meteor Game</a></h4>
+				<small><a href="Meteor%20Game%20classic.exe">the super-super old version with music i dont own. please dont sue me chipzel</a></small><br>
 			    <center><p>
 				Changelog!
 				<br>
