--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             
             <div class="hero-unit">
                 <center><h1><h1>Meteor Game</h1></h1>
-				<h3>Created by <a href="stormyjet.github.io">@StormyJet</a></h3><br>
+				<h3>Created by <a href="http://stormyjet.github.io">@StormyJet</a></h3><br>
 				<h4> This game is free. If anyone is charging you for this game, you have been ripped off unfortunately :( </h4>
                 <h4> To anyone promoting this game, please link to this page and not a direct download link </h4><br><br></p>
                 
