--- a/landing.html
+++ b/landing.html
@@ -40,10 +40,10 @@
     var s = document.getElementsByTagName('script')[0];
     s.parentNode.insertBefore(wf, s);
   })(); </script><center>
-<div style="font-family: 'Pacifico', serif; font-size:69pt;background-color:red;">Attention:</div><div style=";background-color:red;"><br>
-                <h2> This website will be moving from Dropbox to GitHub for hosting </h2>
-                <h3> This should not affect you, but if anything turns up missing, contact <a href="https://www.twitter.com/stormyjet"> @StormyJet </a> on twitter. </h3>
-                <h4> Thanks! </h4></div></center>
+<!--<div style="font-family: 'Pacifico', serif; font-size:69pt;background-color:red;">Attention:</div><div style=";background-color:red;"><br>
+                <h2> call to attn</h2>
+                <h3> explain and contact <a href="https://www.twitter.com/stormyjet"> @StormyJet </a> on twitter. </h3>
+                <h4> Thanks! </h4></div></center>-->
 
             
             <div class="hero-unit">
@@ -53,7 +53,7 @@
                 <h4> To anyone promoting this game, please link to this page and not a direct download link </h4><br><br></p>
                 
 			<p>	
-				<h2><a href="https://www.dropbox.com/s/5hefej8f9cn3ph1/MeteorGame.exe">Click here to download the latest version of  Meteor Game</a></h2><br>
+				<h2><a href="https://dl.dropboxusercontent.com/u/67160210/METEORGAME/CURRENT/MeteorGame.exe">Click here to download the latest version of  Meteor Game</a></h2><br>
 				<br>
 				<h3> FAQ </h3><br>
 				<h4> Why? </h4>
@@ -63,8 +63,8 @@
 				After leaving sim mode on for <em> 10 minutes </em> the game had spawned over <em> 50,000 </em> meteors. 50,000 meteors, at once. 
 				<h3> Older Versions! </h3><br>
 				<h4> The older versions of Meteor Game are not supported. Any Bugs you find are your responsiblity. You're on your own.</h4><br>
-				<h4><a href="https://dl.dropboxusercontent.com/u/67160210/metero%20game%20site%20and%20mirrors/Retro%20Meteor%20Game.exe"> Click here to the "Retro" version of Meteor Game</a></h4>
-				<small><a href="https://dl.dropboxusercontent.com/u/67160210/metero%20game%20site%20and%20mirrors/Meteor%20Game%20classic.exe">the super-super old version with music i dont own. please dont sue me chipzel</a></small><br>
+				<h4><a href="Retro%20Meteor%20Game.exe"> Click here to the "Retro" version of Meteor Game</a></h4>
+				<small><a href="Meteor%20Game%20classic.exe">the super-super old version with music i dont own. please dont sue me chipzel</a></small><br>
 			    <center><p>
 				Changelog!
 				<br>
