--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <h4> To anyone promoting this game, please link to this page and not a direct download link </h4><br><br></p>
                 
 			<p>	
-				<h2><a href="https://dl.dropboxusercontent.com/u/67160210/metero%20game%20site%20and%20mirrors/MeteorGame.exe">Click here to download the latest version of  Meteor Game</a><p style="font-color='red';">Downloads from Dropbox currently</h2><br>
+				<h2><a href="https://dl.dropboxusercontent.com/u/67160210/metero%20game%20site%20and%20mirrors/MeteorGame.exe">Click here to download the latest version of  Meteor Game</a></h2><br>
 				<br>
 				<h3> FAQ </h3><br>
 				<h4> Why? </h4>
