add back things

--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@
             
             <div class="hero-unit">
                 <center><h1><h1>Meteor Game</h1></h1>
-				<h3>Created by <a href="http://stormyjet.github.iol">@StormyJet</a></h3><br>
+				<h3>Created by <a href="http://stormyjet.github.io">@StormyJet</a></h3><br>
 				<h4> This game is free. If anyone is charging you for this game, you have been ripped off unfortunately :( </h4>
                 <h4> To anyone promoting this game, please link to this page and not a direct download link </h4><br><br></p>
                 
 			<p>	
-<<<<<<< HEAD
-				<h2><a href="https://dl.dropboxusercontent.com/u/67160210/metero%20game%20site%20and%20mirrors/MeteorGame.exe">Click here to download the latest version of  Meteor Game</a></h2><br>
-=======
+
+
+
 				<h2><a href="https://dl.dropboxusercontent.com/u/67160210/METEORGAME/CURRENT/MeteorGame.exe">Click here to download the latest version of  Meteor Game</a></h2><br>
->>>>>>> ef82dd65551b110fcd480631e9dd45e32447e249
+
 				<br>
 				<h3> FAQ </h3><br>
 				<h4> Why? </h4>
