--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
             <hr>
 <center> 
             <footer>
+            <center><small> <a href="https://github.com/meteorgame/meteorgame.github.io">View Source</a></small></center>
                 
 				<script type="text/javascript">
 var bitcoinwidget_init = { autoload: true, host: "//bitcoinwidget.appspot.com" };
