--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/bootstrap-responsive.min.css">
 		<link rel="stylesheet" href="css/bootstrap.min.css">
-
+<link href="css/justified-nav.css" rel="stylesheet"> <!-- STYLE SHEET FOR UNI-NAVBAR-->
         <script src="js/vendor/modernizr-2.6.1-respond-1.1.0.min.js"></script>
     </head>
     <body>
@@ -44,7 +44,19 @@
                 <h2> call to attn</h2>
                 <h3> explain and contact <a href="https://www.twitter.com/stormyjet"> @StormyJet </a> on twitter. </h3>
                 <h4> Thanks! </h4></div></center>-->
-
+<div class="masthead">
+        <center><h3 class="text-muted">Stormy's Website</h3></center>
+        <ul class="nav nav-justified">
+          <li class="active"><a href="#">Stormy Network</a></li>
+          <li><a href="#">Home</a></li>
+          <li><a href="http://twitter.com/stormyjet">Twitter</a></li>
+          <!-- This line to be replaced with proper source--> <li><a href="https://github.com/meteorgame/meteorgame.github.io">Source</a></li>
+          <li class="active"><a href="http://meteorgame.github.io">Meteor Game</a></li>
+          <li><a href="http://mcfs.github.io">MCFS</a></li>
+          <li><a href="http://stormyjettest.github.io">Test</a></li>
+          
+        </ul>
+      </div>
             
             <div class="hero-unit">
                 <center><h1><h1>Meteor Game</h1></h1>
