--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                 <h2> call to attn</h2>
                 <h3> explain and contact <a href="https://www.twitter.com/stormyjet"> @StormyJet </a> on twitter. </h3>
                 <h4> Thanks! </h4></div></center>-->
-<div class="masthead">
-        <center><h3 class="text-muted">Stormy's Website</h3></center>
+    <div class="masthead">
+        <center><h3 class="text-muted">Meteor Game</h3></center>
         <ul class="nav nav-justified">
           <li class="active"><a href="#">Stormy Network</a></li>
           <li><a href="#">Home</a></li>
@@ -59,7 +59,7 @@
       </div>
             
             <div class="hero-unit">
-                <center><h1><h1>Meteor Game</h1></h1>
+                <!--<center><h1><h1>Meteor Game</h1></h1>-->
 				<h3>Created by <a href="http://stormyjet.github.io">@StormyJet</a></h3><br>
 				<h4> This game is free. If anyone is charging you for this game, you have been ripped off unfortunately :( </h4>
                 <h4> To anyone promoting this game, please link to this page and not a direct download link </h4><br><br></p>
