--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                 <h2> call to attn</h2>
                 <h3> explain and contact <a href="https://www.twitter.com/stormyjet"> @StormyJet </a> on twitter. </h3>
                 <h4> Thanks! </h4></div></center>-->
+    <div class="container">
     <div class="masthead">
         <center><h3 class="text-muted">Meteor Game</h3></center>
         <ul class="nav nav-justified">
@@ -56,6 +57,7 @@
           <li><a href="http://stormyjettest.github.io">Test</a></li>
           
         </ul>
+      </div>
       </div>
             
             <div class="hero-unit">
