--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
     <div class="masthead">
         <center><h3 class="text-muted">Meteor Game</h3></center>
         <ul class="nav nav-justified">
-          <li class="active"><a href="#">Stormy Network</a></li>
-          <li><a href="#">Home</a></li>
+          <li><a href="http://stormyjet.github.io/network.html">Storm Network</a></li>
+          <li><a href="stormyjet.github.io">Home</a></li>
+          <li><a href="stormyjet.github.io/blog.html">Blog</a></li>
           <li><a href="http://twitter.com/stormyjet">Twitter</a></li>
           <!-- This line to be replaced with proper source--> <li><a href="https://github.com/meteorgame/meteorgame.github.io">Source</a></li>
           <li class="active"><a href="http://meteorgame.github.io">Meteor Game</a></li>
@@ -113,7 +114,9 @@
             <hr>
 <center> 
             <footer>
-            <center><small> <a href="https://github.com/meteorgame/meteorgame.github.io">View Source</a></small></center>
+            <div class="footer">
+        <p>Powered by <a href="stormyjet.github.io/network.html">Storm Network</a></p>
+      </div>
                 
 				<script type="text/javascript">
 var bitcoinwidget_init = { autoload: true, host: "//bitcoinwidget.appspot.com" };
