--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         <center><h3 class="text-muted">Meteor Game</h3></center>
         <ul class="nav nav-justified">
           <li><a href="http://stormyjet.github.io/network.html">Storm Network</a></li>
-          <li><a href="stormyjet.github.io">Home</a></li>
-          <li><a href="stormyjet.github.io/blog.html">Blog</a></li>
+          <li><a href="http://stormyjet.github.io">Home</a></li>
+          <li><a href="http://stormyjet.github.io/blog.html">Blog</a></li>
           <li><a href="http://twitter.com/stormyjet">Twitter</a></li>
           <!-- This line to be replaced with proper source--> <li><a href="https://github.com/meteorgame/meteorgame.github.io">Source</a></li>
           <li class="active"><a href="http://meteorgame.github.io">Meteor Game</a></li>
