--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 <center> 
             <footer>
             <div class="footer">
-        <p>Powered by <a href="stormyjet.github.io/network.html">Storm Network</a></p>
+        <p>Powered by <a href="http://stormyjet.github.io/network.html">Storm Network</a></p>
       </div>
                 
 				<script type="text/javascript">
