--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
             <p>
 
-
+<h4>It wonderful! -Mom</h4>
 
                 <h2><a href="https://dl.dropboxusercontent.com/u/67160210/METEORGAME/CURRENT/MeteorGame.exe">Click here to download the latest version of  Meteor Game</a></h2>
                 <br>
@@ -148,20 +148,6 @@
                     </p>
                 </div>
 
-                <script type="text/javascript">
-                    var bitcoinwidget_init = {
-                        autoload: true,
-                        host: "//bitcoinwidget.appspot.com"
-                    };
-                    (function() {
-                        var x = document.createElement("script");
-                        x.type = "text/javascript";
-                        x.async = true;
-                        x.src = "//bitcoinwidget.appspot.com/js/bitcoinwidget.js";
-                        var s = document.getElementsByTagName("script")[0];
-                        s.parentNode.insertBefore(x, s);
-                    })();
-                </script>
 
 
 
