--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         <div class="hero-unit">
             <!--<center><h1><h1>Meteor Game</h1></h1>-->
-            <h3>Hello! This page has been moved to <a href="http://stormyjet.com/MeteorGame/index.html">here.</a> Please move over to there, this site will be gone eventually. </h3>
+            <h3>Hello! This page has been moved to <a href="http://stormyjet.com/meteor/index.html">here.</a> Please move over to there, this site will be gone eventually. </h3>
 
             <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
             <script>
